syntax = "proto3";

option go_package = "https://git.garena.com/yuan.ding/entry_task/src/rpcapi";

package rpcapi;

// The tcpserver service definition.
service TcpServer {
  // Sends a greeting
  rpc UserLogin (UserLoginInfo) returns (LoginReturn) {}
  rpc UserQuery (UserQueryInfo) returns (QueryReturn) {}
  rpc UpdateNickname (UpdateNicknameInfo) returns (UpdateNicknameReturn) {}
  rpc UploadPic (UploadPicInfo) returns (UpdatePicReturn) {}
}

// message use for Func UserLogin
message UserLoginInfo {
  string username = 1;
  string password = 2;
}

message LoginReturn {
  int32 retcode = 1;
  string msg = 2;
}

// message use for Func UserQuery
message UserQueryInfo {
  string username = 1;
}


message QueryReturn {
  int32 retcode =1;
  string msg = 2;
  message Data{
    string username = 1;
    string nickname = 2;
    string profile_pic= 3;
  };
  Data data = 3;
}

// message use for Func UpdateNickname
message UpdateNicknameInfo {
  string username = 1;
  string nickname = 2;
}

message UpdateNicknameReturn {
  int32 retcode =1;
  string msg = 2;
  message Data{
    string nickname = 1;
  };
  Data data = 3;
}

// message use for Func UpdateNickname
message UploadPicInfo {
  string username = 1;
  int32 filetype = 2;
  bytes file = 3;
}

message UpdatePicReturn {
  int32 retcode =1;
  string msg = 2;
  message Data {
    string profile_pic_url = 1;
  };
  Data data = 3;
}
